# CENGC2025

./: README.md  pyproject.toml
base_cracker/: pyproject.toml
src/base_cracker/: cli.py  completion.py  conversions.py  cracker.py
tests/: test_conversions.py
