[project]
name = "base-cracker"
version = "0.1.0"
description = ""
authors = [
    {name = "Angus Jull",email = "angusjull1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=9.0.1,<10.0.0)"
]

[tool.poetry]
packages = [{include = "base_cracker", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
